--- a/index.html
+++ b/index.html
@@ -18,11 +18,16 @@
       <div class="form-grid">
         <label>Pax:</label><input type="number" id="Pax">
         <label>Client Name:</label><input type="text" id="ClientName">
-        <label>Airport Price LE:</label><input type="number" id="AirportPriceLE">
         <label>How Many Airports:</label><input type="number" id="HowManyAirports">
-        <label>Sightseeing:</label><input type="number" id="Sightseeing">
-        <label>Sightseeing Value LE:</label><input type="number" id="SightseeingValueLE">
-        <label>Other Transfers LE:</label><input type="number" id="OtherTransfersLE">
+        <label>Airport Price EGP:</label><input type="number" id="AirportPriceLE">
+        <label>How Many DayTous:</label><input type="number" id="Sightseeing">
+        <label>DayTour Transfer Value EGP:</label><input type="number" id="SightseeingValueLE">
+        <label>Other Transfers EGP:</label><input type="number" id="OtherTransfersLE">
+        <label>Guide EGP:</label><input type="number" id="GuideLE">
+        <label>Leader EGP:</label><input type="number" id="LeaderLE">
+        <label>Lunch EGP:</label><input type="number" id="LunchLE">
+        <label>Tickets EGP:</label><input type="number" id="TicketsLE">
+        <label>Other Options USD:</label><input type="number" id="OtherOptionsUSD">
         <label>Cairo Accommodation USD:</label><input type="number" id="CairoAccommodationUSD">
         <label>Cairo Nights:</label><input type="number" id="CairoNights">
         <label>Luxor Accommodation USD:</label><input type="number" id="LuxorAccommodationUSD">
@@ -33,13 +38,8 @@
         <label>Hurghada Nights:</label><input type="number" id="HurghadaNights">
         <label>Cruise Accommodation USD:</label><input type="number" id="CruiseAccommodationUSD">
         <label>Cruise Nights:</label><input type="number" id="CruiseNights">
-        <label>Lunch LE:</label><input type="number" id="LunchLE">
-        <label>Tickets LE:</label><input type="number" id="TicketsLE">
         <label>Flights USD:</label><input type="number" id="FlightsUSD">
-        <label>Other Options USD:</label><input type="number" id="OtherOptionsUSD">
         <label>International Flights USD:</label><input type="number" id="InternationalFlightsUSD">
-        <label>Guide LE:</label><input type="number" id="GuideLE">
-        <label>Leader LE:</label><input type="number" id="LeaderLE">
         <label>Currency:</label><input type="number" id="Currency">
         <label>Profit Percentage:</label><input type="number" id="ProfitPercentage">
         <!-- Nouveaux champs -->
