--- a/index.html
+++ b/index.html
@@ -21,23 +21,23 @@
         <label>How Many Airports:</label><input type="number" id="HowManyAirports">
         <label>Airport Price EGP:</label><input type="number" id="AirportPriceLE">
         <label>How Many DayTous:</label><input type="number" id="Sightseeing">
-        <label>DayTour Transfer Value EGP:</label><input type="number" id="SightseeingValueLE">
+        <label>DayTour Transfers Value EGP:</label><input type="number" id="SightseeingValueLE">
         <label>Other Transfers EGP:</label><input type="number" id="OtherTransfersLE">
         <label>Guide EGP:</label><input type="number" id="GuideLE">
         <label>Leader EGP:</label><input type="number" id="LeaderLE">
         <label>Lunch EGP:</label><input type="number" id="LunchLE">
         <label>Tickets EGP:</label><input type="number" id="TicketsLE">
         <label>Other Options USD:</label><input type="number" id="OtherOptionsUSD">
-        <label>Cairo Accommodation USD:</label><input type="number" id="CairoAccommodationUSD">
         <label>Cairo Nights:</label><input type="number" id="CairoNights">
-        <label>Luxor Accommodation USD:</label><input type="number" id="LuxorAccommodationUSD">
+        <label>Cairo Accommodation USD:</label><input type="number" id="CairoAccommodationUSD">
         <label>Luxor Nights:</label><input type="number" id="LuxorNights">
-        <label>Aswan Accommodation USD:</label><input type="number" id="AswanAccommodationUSD">
+        <label>Luxor Accommodation USD:</label><input type="number" id="LuxorAccommodationUSD">
         <label>Aswan Nights:</label><input type="number" id="AswanNights">
-        <label>Hurghada Accommodation USD:</label><input type="number" id="HurghadaAccommodationUSD">
-        <label>Hurghada Nights:</label><input type="number" id="HurghadaNights">
-        <label>Cruise Accommodation USD:</label><input type="number" id="CruiseAccommodationUSD">
+        <label>Aswan Accommodation USD:</label><input type="number" id="AswanAccommodationUSD">
+        <label>Red Sea Nights:</label><input type="number" id="HurghadaNights">
+        <label>Red Sea Acc. USD:</label><input type="number" id="HurghadaAccommodationUSD">
         <label>Cruise Nights:</label><input type="number" id="CruiseNights">
+        <label>Cruise Accommodation USD:</label><input type="number" id="CruiseAccommodationUSD">
         <label>Flights USD:</label><input type="number" id="FlightsUSD">
         <label>International Flights USD:</label><input type="number" id="InternationalFlightsUSD">
         <label>Currency:</label><input type="number" id="Currency">
